# OpenCL

./: .gitignore  README.md
01_PlatformInformation/: CMakeLists.txt
01_PlatformInformation/configuration/: config.h.in
01_PlatformInformation/src/: main.cpp
02_Vadd Kernel/: CMakeLists.txt  README.md
02_Vadd Kernel/configuration/: config.h.in
02_Vadd Kernel/src/: main.cpp
03_Vadd Kernel_cpp/: CMakeLists.txt  README.md
03_Vadd Kernel_cpp/configuration/: config.h.in
03_Vadd Kernel_cpp/kernel/: vadd.cl  vadd3.cl
03_Vadd Kernel_cpp/src/: main.cpp
04_MatrixMult_cpp/: CMakeLists.txt
04_MatrixMult_cpp/configuration/: config.h.in
04_MatrixMult_cpp/kernel/: matMul.cl  matMulBlocForm.cl  matMulRow.cl  matMulRowPriv.cl  matMulRowPrivBloc.cl
04_MatrixMult_cpp/src/: main.cpp  util.hpp
05_Reduction_Numerical_Integration/: CMakeLists.txt
05_Reduction_Numerical_Integration/configuration/: config.h.in
05_Reduction_Numerical_Integration/kernel/: numIntegration.cl
05_Reduction_Numerical_Integration/src/: main.cpp  matrix_lib.h
